compiler/typ/tests/fixtures/diagnostics/0007_core_apply_non_function_01.ml.infer.expected
File "0007_core_apply_non_function_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0007_core_apply_non_function_01 is not a valid module name.

File "0007_core_apply_non_function_01.ml", line 3, characters 2-7:
3 |   alpha 1
      ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
